welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: error: value Est is not a member of object plm.universe.Direction
  if (getDirection()==Direction.Est) {
                                ^